--- a/aeropuerto/bin/src/main/resources/application.properties
+++ b/aeropuerto/bin/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=aeropuerto
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/aeropuertodb
+spring.datasource.url=jdbc:postgresql://aeropuertoDB:5432/aeropuerto
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
